fix compile
Signed-off-by: zihe.liu <ziheliu1024@gmail.com>